--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+  MathJax.Hub.Config({
+  tex2jax: {
+    inlineMath: [['$','$'], ['\\(','\\)']],
+    processEscapes: true
+  }
+});
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>MathJax example</title>
@@ -14,6 +20,7 @@
   $$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
   
   $$x^2+y^2=\int_{0}^{1}f(x,y)$$
+  $x^2$
 </p>
 </body>
 </html>
