--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
 </script>
 </head>
 <body>
+  <nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/RealAnalysis/chapter1.html">Problems in Real Analysis</a></li>
+        		
+    		</ul>
+		</nav>
 <p>
   When \(a \ne 0\), there are two solutions to \(ax^2 + bx + c = 0\) and they are
   $$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
