--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 		<div class="container">
     		<div class="blurb">
         		<div class="header">
-  <img src="https://github.com/stammath/stammath.github.io/blob/master/logo.png" alt="logo" />
+  <img src="/logo.png" alt="logo" />
   <h1>My website name</h1>
 </div>
 
