--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
     		<div class="blurb">
         	<div class="header">
   <img src="/logo.png" alt="logo" />
-  <h1>My website name</h1>
+  <h1 style="text-align:center;">The Stammering Mathematician</h1>
+<p style="text-align:center;">--abstract, concrete, and conjecture gibberishh by a Mathematician</p>
 </div>
 
 				
