--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         	<div class="header">
   <img src="/logo.png" alt="logo" />
   <h1 style="text-align:center;">The Stammering Mathematician</h1>
-<p style="text-align:center;">--abstract, concrete, and conjecture gibberishh by a Mathematician</p>
+<p style="text-align:center;">--abstract, concrete, and conjectural gibberish by a Mathematician</p>
 </div>
 
 				
