--- a/index.html
+++ b/index.html
@@ -89,57 +89,6 @@
 .show {
   display: block;
 }
-	
-	
-
-.gropdown {
-  float: left;
-  overflow: hidden;
-}
-
-.gropdown .gropbtn {
-  cursor: pointer;
-  font-size: 16px;  
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
-
-.navbar a:hover, .gropdown:hover .gropbtn, .gropbtn:focus {
-  background-color: red;
-}
-
-.gropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.gropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.gropdown-content a:hover {
-  background-color: #ddd;
-}
-
-
-.show {
-  display: block;
-}
-
 
 </style>
 
@@ -191,20 +140,16 @@
     <a href="/ODE-PDE/odepde.html">Ordinary and Partial Differential Equations</a>
   </div>
   </div> 
-	
-	
-<div class="gropdown">
-  <button class="gropbtn" onclick="myFunction()">Others
-    <i class="fa fa-caret-down"></i>
-  </button>
- 
-  <div class="gropdown-content" id="myGropdown">
-    <a href="https://www.sportskeeda.com/profile/vikas-srivastava-1">Sports</a>
+   <a href="https://www.sportskeeda.com/profile/vikas-srivastava-1">Sports</a>
     <a href="#">Chess</a>
-    <a href="#">Tobefilledlater</a>
-  </div>
-  </div> 
+  
+ 
+	
 </div>
+ 
+  
+   
+
 
 <h3>Dropdown Menu inside a Navigation Bar</h3>
 <p>Click on the "Dropdown" link to see the dropdown menu.</p>
@@ -227,27 +172,13 @@ window.onclick = function(e) {
 }
 </script>
 	
-	<script>
-function myFunction() {
-  document.getElementById("myGropdown").classList.toggle("show");
-}
 
-// Close the dropdown if the user clicks outside of it
-window.onclick = function(e) {
-  if (!e.target.matches('.gropbtn')) {
-  var myDropdown = document.getElementById("myGropdown");
-    if (myDropdown.classList.contains('show')) {
-      myDropdown.classList.remove('show');
-    }
-  }
-}
-</script>
 <p>
  
 	<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="mailto:stammeringmathematician@gmail.com">email</a></li>
+        		
 			</ul>
 		</footer>
 </p>
