--- a/index.html
+++ b/index.html
@@ -151,8 +151,10 @@
    
 
 
-<h3>Dropdown Menu inside a Navigation Bar</h3>
-<p>Click on the "Dropdown" link to see the dropdown menu.</p>
+
+<p>Hello. Welcome to my mathematics blog/website. You can think of this website as my online notebook.
+
+This is a website on my independent mathematical research, stuffs I read, questions I solve, and related topics.</p>
 
 <script>
 /* When the user clicks on the button, 
