--- a/RealAnalysis/l^infty_is_complete.html
+++ b/RealAnalysis/l^infty_is_complete.html
@@ -37,7 +37,7 @@
     		<div class="blurb">
         	<div class="header">
  
-  <h1 style="text-align:center;">Problems in Real Analysis</h1>
+  <h2 style="text-align:center;">$l^\infty$ is complete</h2>
 
 </div>
 
@@ -49,7 +49,7 @@
   
 	
 
-<h3>$l^\infty$ is complete</h3>
+
 	<p><b>Proof</b></p>
 <p><br />
 	
@@ -58,35 +58,38 @@
 Let $\{x^1,x^2, \dots$ \} be a Cauchy sequence in $X$. 
 
 There is a reason we have used superscript notation to denote the sequence. Note that each element of $x $, say $x^n$ is itself a sequence, that is $$x^n={x_1^{n},x_2^{n},\dots}$$ so we have used superscript notation to avoid any confusion. 
+<br>
+Aim: We want to find an element $x\in X$ suhc that $\lim_{n\to \infty} x^n=x$
 
-Target: We want to find an element $x\in X$ suhc that $\lim_{n\to \infty} x^n=x$
-
-
+<br>
 It is given to us that $x^n$ is Cauchy. By definition "for every $\epsilon>0$, there exist $N\in \mathbb{N}$ such that $||x^n-x^m||_\infty<\epsilon$ for all $n,m >N$
-
+<br>
 Note that, $||x||_\infty=\sup_{i}|x_i|$ so if $||x||_\infty<\epsilon$, it would imply $|x_i|<\epsilon$ for each $i$. 
-
+<br>
 Now we will use the above observation. We have seen that $$||x^n-x^m||_\infty<\epsilon$$  which  implies that $$\sup_{k}|x^n_k-x^m_k|<\epsilon$$ which further implies that $$|x^n_k-x^m_k|<\epsilon$$
 
 
-
+<br>
 Consider the following sequence $x_k^1,x_k^2,x_k^3,\dots$. The last inequality shows that $x_k^1,x_k^2,\dots$ is a Cauchy sequence.
-
+<br>
 Using the fact that $R$ is complete, we conclude that $x^n_k$ converges to some real number say $x_k$
-
+<br>
 Let $x=(x_1,x_2,\dots)$ be a new sequence formed by taking all such limits. 
-
+<br>
 Now we will show that $x^n$ converges to $x$
-
+<br>
 Let $\epsilon>0$, as we have seen before we can find $N>0$ such that $|x^n_k-x^m_k|<\epsilon/2$ for all $k$, and for all $n,m>N$.
-
+<br>
 Fix $n$ and take limit $m\to\infty$, we get that $|x^n_k-x_k|\leq\epsilon/2$
-
+<br>
 Taking supremum over $k$ we get that $$\sup_{k}|x^n_k-x_k|\leq\epsilon/2$$
-
+<br>
 In other words $$||x^n-x||_\infty<\epsilon/2<\epsilon$$
-
+<br>
 This implies $x^n$ converges to $x$.
+	
+<br>
+	
   
 	<footer>
     		<ul>
