--- a/RealAnalysis/sumquestion.html
+++ b/RealAnalysis/sumquestion.html
@@ -60,7 +60,7 @@ Note that $${{n}\choose{k}}={n!\over (n-r)!r!}$$
 </br>
 Also, we have $${{n-2}\choose{k-2}}=\frac{(n-2)!}{(n-2-k+2)!(k-2)!}=\frac{(n-2)!}{(n-k)!(k-2)!}$$
 </br>
-Inside the summation sign, we have the expression $${n!\over (n-k)!(k-2)!}$$ so it can rewritten as $$n(n-1){{n-2}\choose{k-2}}$$
+Inside the summation sign, we have the expression $${n!\over (n-k)!(k-2)!}$$ so it can be rewritten as $$n(n-1){{n-2}\choose{k-2}}$$
 </br>
 Therefore $$\sum_{k=2}^n {n!\over (n-k)!(k-2)!}=\sum_{k=2}^n n(n-1){{n-2}\choose{k-2}}$$ 
 </br>
