--- a/LinearAlgebra/remarktriangularmatrix.html
+++ b/LinearAlgebra/remarktriangularmatrix.html
@@ -51,11 +51,11 @@
 	
 
 
-	<p><b>Proof</b></p>
+	
 <p><br />
 	Some remarks: 
 
-Let me explain the concept by taking a general $4\times 4$ matrix. 
+Let me explain the concept by taking a general $4\times 4$ upper traingular matrix. 
 
 </br>
 $$A = \left(
@@ -68,7 +68,7 @@ $$A = \left(
 \right)$$
 
 </br>
-Eigenvalues of matrix by definition are the roots of the following equation: 
+Eigenvalues of matrix by definition, are the roots of the following equation(also known as characteristic equation of matrix : 
 
 </br>
 $$\det({A-\lambda I})=0$$
