--- a/LinearAlgebra/remarktriangularmatrix.html
+++ b/LinearAlgebra/remarktriangularmatrix.html
@@ -98,7 +98,7 @@ Putting it  equal to zero we get that roots are equal to $$a_{11},a_{22},a_{33},
 
 </br>
 </br>
-Since we know that roots of char. equation are eigenvalues., we conclude that eigenvalues  of the matrix are $a_{11},a_{22},a_{33},a_{44}$
+Since we know that roots of char. equation are eigenvalues, we conclude that eigenvalues  of the matrix are $a_{11},a_{22},a_{33},a_{44}$
 
 </br>
 </br>
@@ -114,7 +114,7 @@ Recall that if the eigenvalues are distinct, matrix is diagonalizable. So for a 
 
 </br>
 </br>
-But \textbf{if the diagonal entries are not distinct, that is if one of them repeat itself, the matrix may not be diagonalizable. In short  can not conclude anything. Both cases may occur: matrix may be diagonalizable or matrix my be non diagonalizable. 
+But if the diagonal entries are not distinct, that is if one of them repeat itself, the matrix may not be diagonalizable. In short nothing can be conclude and, both cases may occur: matrix may be diagonalizable or matrix my be non diagonalizable. 
 
 </br>
 </br>
@@ -143,7 +143,7 @@ $$C = \left(
 
 </br>
 </br>
-It has only one eigenvalue, namely $1$. Geometric multiplicity is $2$ and algebraic multiplicity is $4$ so matrix is not diagonalizable. 
+It has only one eigenvalue, namely $1$. Geometric multiplicity is $2$ and algebraic multiplicity is $4$. Therefore matrix is not diagonallizable.
 
 </br>
 </br>
